feat: add sequelize validation
